--- a/client/views/splash/splash.html
+++ b/client/views/splash/splash.html
@@ -1,6 +1,9 @@
 <template name="splash">
   <div id="splash">
     <div class="container">
+      <div class="logo-container">
+          <img id="logo" src="/assets/images/ichack19-logo-white.png" alt="logo"/>
+      </div>
       <div class="header">
         {{constant 'Q_NAME'}}
       </div>
