--- a/client/components/banner/banner.html
+++ b/client/components/banner/banner.html
@@ -2,7 +2,8 @@
   <div id="banner">
     <div class="content">
       <a href="/">
-        <img id="logo" src="/assets/images/ichack19-logo-white.png" alt="logo"/> {{constant 'Q_NAME'}}
+        <img id="logo" src="/assets/images/ichack-logo-white.png" alt="logo" />
+        {{constant 'Q_NAME'}}
       </a>
     </div>
   </div>
